--- a/MiniProjet2/src/main/resources/templates/formVoiture.html
+++ b/MiniProjet2/src/main/resources/templates/formVoiture.html
@@ -63,7 +63,7 @@ layout:decorator="template">
 						</div>
 
 <label class="control-label">page : </label>
-  <input type="text" name="page"  th:value="${page}" disabled/>
+  <input type="text" name="page"  th:value="${page}" />
  <div>
  <button type="submit" class="btn btn-primary">Valider</button>
  </div>
